--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       input {
         border: none;
         background-color: rgba(169, 169, 169, 0.582);
-        padding: 10px;
+        padding: 10px 60px;
+        
       }
      
       img{
@@ -39,19 +40,19 @@
       <div class="row">
         <!-- img -->
         <div class="col-md-6">
-          <img src="money.jpg" alt=""  class="h-100  img-fluid d-block mx-auto shadow-lg  " />
+          <img src="money.jpg" alt=""  class="h-100  img-fluid d-block mx-auto   " />
         </div>
 
 
 
 <!-- calculate form -->
-        <div class="col-md-6  secend-part d-flex flex-column align-items-center shadow-lg  pb-lg-3">
+        <div class="col-md-6  secend-part d-flex flex-column align-items-center  pb-4 ">
 
   
-            <aside class=" text-end  w-md-75 pe-md-3 ">
+            <aside class="   pe-md-3 ">
               <h5 class="text-center ps-md-3  ms-md-4 fw-bold text-black pt-4">Income</h5>
-              <p>
-                <label for="income">Income:</label>
+              <p class="d-flex flex-column flex-md-row justify-content-md-end align-items-md-center">
+                <label for="income" class="fw-bold pe-lg-2">Income:</label>
                 <input
                   type="text"
                   id="income"
@@ -62,20 +63,20 @@
               </p>
 
               <h5 class="text-center fw-bold mt-4 ps-md-3 ms-md-4 text-black">Expenses</h5>
-              <p>
-                <label for="food">Food:</label>
+              <p class="d-flex flex-column flex-md-row justify-content-md-end align-items-md-center">
+                <label for="food" class="fw-bold pe-lg-2">Food:</label>
                 <input type="text" id="food" class="food-input-feild px-lg-5" placeholder="Please enter food cost" /><br />
                 <span class="food-error m-0 p-0 text-danger"> </span>
               </p>
 
-              <p>
-                <label for="rent">Rent:</label>
+              <p class="d-flex flex-column flex-md-row justify-content-md-end align-items-md-center">
+                <label for="rent" class="fw-bold pe-lg-2">Rent:</label>
                 <input type="text" id="rent" class="rent-input-feild px-lg-5" placeholder="Please enter rent cost" /> <br />
                 <span class="rent-error m-0 p-0 text-danger"> </span>
               </p>
 
-              <p>
-                <label for="clothes">Clothes:</label>
+              <p class="d-flex flex-column flex-md-row justify-content-md-end align-items-md-center">
+                <label for="clothes" class="fw-bold pe-lg-2">Clothes:</label>
                 <input
                   type="text"
                   id="clothes"
@@ -108,8 +109,8 @@
               Balance:<span class="balance-money">0</span>
             </p>
             <p class="text-center">
-              Save: <input type="text" class="w-25 save-parcentage" placeholder="save"/><span
-                class="px-3"
+              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage px-3" placeholder="save"  style="width: 30%;"/><span
+                class="px-1"
               >
                 %</span
               >
