--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       input {
         border: none;
         background-color: rgba(169, 169, 169, 0.582);
-        padding: 10px 60px;
+        padding: 10px 35px;
         
       }
      
@@ -109,7 +109,7 @@
               Balance:<span class="balance-money">0</span>
             </p>
             <p class="text-center">
-              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage px-3" placeholder="save"  style="width: 30%;"/><span
+              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage px-0 " placeholder="save-money"  style="width: 30%;"/><span
                 class="px-1"
               >
                 %</span
