--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <aside class="text-center">
 
             <button
-              class="calculate-button btn btn-primary px-5 py-2 d-block mx-auto my-2 fw-bold"
+              class="calculate-button btn btn-primary px-5 py-lg-2 d-block mx-auto my-lg-2 mb-3 mb-lg-0 fw-bold "
             >
               Calculate
             </button>
@@ -109,7 +109,7 @@
               Balance:<span class="balance-money">0</span>
             </p>
             <p class="text-center">
-              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage ps-0 ps-lg-3 " placeholder="save-money"  style="width: 30%;"/><span
+              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage ps-0 ps-lg-3 "  style="width: 30%;"/><span
                 class="px-1"
               >
                 %</span
