--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               Balance:<span class="balance-money">0</span>
             </p>
             <p class="text-center">
-              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage ps-0 ps-lg-3 "  style="width: 30%;"/><span
+              <label for="save" class="fw-bold pe-lg-2">Save:</label> <input type="text" id="save" class=" save-parcentage ps-0 ps-2 px-0 ps-lg-3" placeholder="save-money" style="width: 30%;"/><span
                 class="px-1"
               >
                 %</span
