--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <aside class="text-center">
 
             <button
-              class="calculate-button btn btn-primary px-5 py-lg-2 d-block mx-auto my-lg-4 mb-3 mb-lg-4 fw-bold "
+              class="calculate-button btn btn-primary px-5 py-lg-2 d-block mx-auto my-lg-3 mb-3 mb-lg-3 mt-0  fw-bold "
             >
               Calculate
             </button>
