--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             >
               Calculate
             </button>
-
+            <span class="balance-error m-0 p-0 text-danger "></span> 
             <p class="fw-bold text-center pb-0 mb-0">
               Total Expenses:<span class="expenses-money">0</span>
             </p>
-            <span class="balance-error m-0 p-0 text-danger "></span> 
+            <!-- <span class="balance-error m-0 p-0 text-danger "></span>  -->
             <p class="fw-bold text-center pt-0 mt-0">
               Balance:<span class="balance-money">0</span>
             </p>
@@ -122,11 +122,11 @@
                 Save
               </button>
             </p>
-
+            <span class="saving-error text-danger"></span>
             <p class="fw-bold text-center pb-0 mb-0">
               Saving Amount:<span class="saving-amount">0</span>
             </p>
-            <span class="saving-error text-danger"></span>
+            <!-- <span class="saving-error text-danger"></span> -->
             <p class="fw-bold text-center">
               Remaining Balance :<span class="ramining-balance">0</span>
             </p>
